syntax = "proto3";

package logs;

option go_package = "/proto";

service LogService {
    rpc AddLogs(LogEntry) returns (AddResponse);
    rpc FetchLogs(FetchRequest) returns (FetchResponse);
}

message FetchRequest { 
    string team_id = 1;
}

message LogEntry {
    string user_name = 1;
    string status = 2;
    string feeling = 3;
    string timestamp = 4;
}

message AddResponse {
    string message = 1;
}

message FetchResponse { 
    repeated LogEntry logs = 1;
}

